Add quo.js (Fix gestures), move view wrapper resizing to views module and fix behaviour

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="js/vendor/jquery.js"></script>
         <script type="text/javascript" src="js/vendor/jquery.transit.js"></script>
         <script type="text/javascript" src="js/vendor/jquery.easing.js"></script>
+        <script type="text/javascript" src="js/vendor/quo.js"></script>
         <script type="text/javascript" src="js/vendor/handlebars.js"></script>
         <script type="text/javascript" src="js/vendor/box2dweb.js"></script>
 
