--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="js/vendor/jquery.easing.js"></script>
         <script type="text/javascript" src="js/vendor/quo.js"></script>
         <script type="text/javascript" src="js/vendor/handlebars.js"></script>
-        <script type="text/javascript" src="js/vendor/box2dweb.js"></script>
+        <script type="text/javascript" src="js/vendor/box2dweb.custom.js"></script>
 
         <title> Game Test </title>
 
