--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
         <script type="text/javascript" src="js/vendor/handlebars.js"></script>
         <script type="text/javascript" src="js/vendor/box2dweb.custom.js"></script>
 
-        <title> Game Test </title>
+        <title> FlickBlaster Demo </title>
 
     </head>
     <body>
