Small layout amends and addition of web app icons

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,12 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+
+        <link rel="apple-touch-icon" href="res/icon/ios/icon-60-precomposed.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="res/icon/ios/icon-76-precomposed.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="res/icon/ios/icon-60-2x-precomposed.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="res/icon/ios/icon-76-2x-precomposed.png" />
         
         <link rel="stylesheet" type="text/css" href="compiled.css" />
 
