Implement all achievements and improve achievements module

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,8 @@
 
         <div id="view-wrap"></div>
 
+        <div id="notifications-wrap"></div>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/templates.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
