Add sounds, settings and contributors in readme

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="js/vendor/quo.js"></script>
         <script type="text/javascript" src="js/vendor/handlebars.js"></script>
         <script type="text/javascript" src="js/vendor/box2dweb.custom.js"></script>
+        <script type="text/javascript" src="js/vendor/buzz.min.js"></script>
 
         <title> FlickBlaster Demo </title>
 
